<resources>
    <string name="app_name">Frida Injector - Pocket Edition</string>
    <string name="action_open">open</string>
    <string name="action_settings">setting</string>
    <string name="action_gotoline">gotoline</string>

    <string name="pref_appearance">Appearance</string>
    <string name="pref_fullscreen_mode">Fullscreen mode</string>
    <string name="pref_night_mode">Night mode</string>
    <string name="pref_editor">Editor</string>
    <string name="pref_wordwrap">Wordwrap</string>
    <string name="pref_community">Community</string>

    <string name="menu_jump_to_line">Jump to line</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_redo">Redo</string>

    <string name="package_name">Package name</string>
    <string name="open_apk">Open</string>
    <string name="script_path">Script path</string>
    <string name="open_script">Open</string>
    <string name="run">Run</string>

    <string name="your_code">// Your code</string>
    <string name="enter_number_line">Enter number line</string>
    <string name="jump_to_line">Jump to line</string>
    <string name="dialog_about_title">About</string>
    <string name="select_script">Select script</string>
    <string name="select">Select</string>

</resources>
