<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mcal.fridainjectorpe.activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/main"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardView"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icon"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:background="@mipmap/ic_launcher_round" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1.0"
                    android:hint="@string/package_name"
                    app:errorEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/TextInputLayoutTheme"
                        android:id="@+id/app_package"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="5dp"
                        android:inputType="textNoSuggestions"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/browseapk"
                    android:id="@+id/select"
                    android:text="@string/open_apk"
                    app:srcCompat="@drawable/ic_android" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1.0"
                    android:hint="@string/script_path"
                    app:errorEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/TextInputLayoutTheme"
                        android:id="@+id/script_path"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="5dp"
                        android:inputType="textNoSuggestions"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/open_script"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/browseapk"
                    android:text="@string/open_script"
                    app:srcCompat="@drawable/ic_folder_open" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/browseapk"
                android:id="@+id/run"
                android:text="@string/run" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardView"
            android:orientation="vertical"
            android:padding="10dp">

            <com.mcal.fridainjectorpe.editor.TextEditor
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/code_editor"
                android:ems="10" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>